Added the budget report

--- a/NHMBudgetSystem/src/main/resources/application.properties
+++ b/NHMBudgetSystem/src/main/resources/application.properties
@@ -14,7 +14,7 @@ database.password=root
 #hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=true
 
 #Connection pool related properties
